--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".vim_runtime"]
 	path = .vim_runtime
-	url = git@github.com:sindrehenriksen/vim_runtime.git
+	url = git@github.com:sindrehenriksen/vimrc.git
