--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,7 @@
     sh = stash
     r = reset
     rb = rebase
+    loga = log --oneline --decorate --graph --all --color
 
 [rebase]
 	autosquash = true
