--- a/.shellrc
+++ b/.shellrc
@@ -15,6 +15,8 @@ alias g="git"
 alias c="clear"
 alias wo="workon"
 alias wc="watch --color "
+alias ll='ls -alF'
+alias la='ls -A'
 
 # RRG
 #alias mountgputmp='mkdir -p /tmp/gputmp && sshfs -o reconnect,ServerAliveInterval=15,ServerAliceCountMax=3 gpu:/tmp /tmp/gputmp'
