--- a/.shellrc
+++ b/.shellrc
@@ -8,6 +8,7 @@ export PROJECT_HOME=~/dev
 source ~/.local/bin/virtualenvwrapper.sh
 
 ## Aliases
+alias v="vim"
 alias scourse="cd /mnt/c/Users/sindr/Google\ Drive/NTNU/Emner/SpecCourse"
 alias downloads="cd /mnt/c/Users/sindr/Downloads"
 alias master="cd /mnt/c/Users/sindr/Google\ Drive/NTNU/Emner/Master"
