--- a/.shellrc
+++ b/.shellrc
@@ -1,4 +1,4 @@
-# Personal
+#### General
 export VISUAL=vim
 export EDITOR="$VISUAL"
 export DISPLAY=localhost:0
@@ -7,7 +7,7 @@ export WORKON_HOME=~/.virtualenvs
 export PROJECT_HOME=~/dev
 source ~/.local/bin/virtualenvwrapper.sh
 
-## Aliases
+#### Aliases
 alias v="vim"
 alias scourse="cd /mnt/c/Users/sindr/Google\ Drive/NTNU/Emner/SpecCourse"
 alias downloads="cd /mnt/c/Users/sindr/Downloads"
@@ -19,7 +19,7 @@ alias wc="watch --color "
 alias ll='ls -alF'
 alias la='ls -A'
 
-# RRG
+#### RRG
 #alias mountgputmp='mkdir -p /tmp/gputmp && sshfs -o reconnect,ServerAliveInterval=15,ServerAliceCountMax=3 gpu:/tmp /tmp/gputmp'
 alias mgtmp="rsync -avu --delete -e ssh gpu:tmp/ /tmp/gputmp"
 alias mgtmpp="rsync -avu --delete -e ssh gpu-public:tmp/ /tmp/gputmp"
