Use exa as replacement for ls

--- a/.shellrc
+++ b/.shellrc
@@ -7,6 +7,16 @@ export WORKON_HOME=~/.virtualenvs
 export PROJECT_HOME=~/dev
 source ~/.local/bin/virtualenvwrapper.sh
 
+#### Helper functions
+# Check if the given command is available for gradual degradation purposes
+function command_exists() {
+    if ! hash "${1}" &>/dev/null
+    then
+        return 1
+    fi
+    return 0
+}
+
 #### Aliases
 alias v="vim"
 alias scourse="cd /mnt/c/Users/sindr/Google\ Drive/NTNU/Emner/SpecCourse"
@@ -16,8 +26,24 @@ alias g="git"
 alias c="clear"
 alias wo="workon"
 alias wc="watch --color "
-alias ll='ls -alF'
-alias la='ls -A'
+
+# Use exa as replacement for ls if available
+if command_exists exa; then
+    alias ls='exa -F --group-directories-first'
+    alias ll='exa -lF --group-directories-first'
+    alias la='exa -alF --group-directories-first'
+else
+    if [ -x /usr/bin/dircolors ]; then
+	test -r ~/.dircolors && eval "$(dircolors -b ~/.dircolors)" || eval "$(dircolors -b)"
+	alias ls='ls -F --group-directories-first --color=auto'
+	alias ll='ls -lF --group-directories-first --color=auto'
+	alias la='ls -AlF --group-directories-first --color=auto'
+    else
+	alias ls='ls -F --group-directories-first'
+	alias ll='ls -lF --group-directories-first'
+	alias la='ls -AlF --group-directories-first'
+    fi
+fi
 
 #### RRG
 #alias mountgputmp='mkdir -p /tmp/gputmp && sshfs -o reconnect,ServerAliveInterval=15,ServerAliceCountMax=3 gpu:/tmp /tmp/gputmp'
