--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,7 @@
     loga = log --oneline --decorate --graph --all --color
     lom = log --oneline master..
     fd = diff-tree --no-commit-id --name-only -r
+    cp = cherry-pick
 
 [rebase]
     autosquash = true
