--- a/.shellrc
+++ b/.shellrc
@@ -3,6 +3,7 @@ export VISUAL=vim
 export EDITOR="$VISUAL"
 export DISPLAY=localhost:0
 export LANG=en_US.UTF-8  # added to fix zplug command output
+export PATH="/Users/sindre.henriksen/.local/bin:$PATH"
 
 
 #### Virtualenv
