--- a/.shellrc
+++ b/.shellrc
@@ -36,6 +36,11 @@ function command_exists() {
 }
 
 
+rgr() {
+    rg $1 --files-with-matches | xargs perl -i -pe"s/$1/$2/g"
+}
+
+
 #### Aliases
 alias v="vim"
 alias scourse="cd /mnt/c/Users/sindr/Google\ Drive/NTNU/Emner/SpecCourse"
