Add alias for copying git branch name to cb

--- a/.shellrc
+++ b/.shellrc
@@ -52,6 +52,7 @@ alias c="clear"
 alias wo="workon"
 alias wc="watch --color "
 alias del="mv -t ~/.Trash/"
+alias gbcp="git branch | grep '^\*' | cut -d ' ' -f 2 | tr -d '\n' | pbcopy"
 
 # Use exa as replacement for ls if available
 #if command_exists exa; then
