--- a/.shellrc
+++ b/.shellrc
@@ -7,7 +7,8 @@ export PATH="/Users/sindre.henriksen/.local/bin:$PATH"
 
 
 #### Virtualenv
-export VIRTUALENVWRAPPER_PYTHON=/usr/local/bin/python3.10
+export VIRTUALENV_PYTHON=/Users/sindre.henriksen/.local/share/rtx/installs/python/3.11.7/bin/python3.11
+export VIRTUALENVWRAPPER_PYTHON=/Users/sindre.henriksen/.local/share/rtx/installs/python/3.11.7/bin/python3.11
 export WORKON_HOME=~/.virtualenvs
 export PROJECT_HOME=~/dev
 source /usr/local/bin/virtualenvwrapper.sh
