Add git pull master and rebase alias

--- a/.shellrc
+++ b/.shellrc
@@ -46,6 +46,9 @@ alias wo="workon"
 alias wc="watch --color "
 alias del="mv -t ~/.Trash/"
 alias gbcp="git branch | grep '^\*' | cut -d ' ' -f 2 | tr -d '\n' | pbcopy"
+# Rebase onto updated master (taking into account that master upstream may be "main")
+alias grbm="gbcp ; git checkout master ; git pull ; git checkout $(pbpaste) ; git rebase master"
+alias grbmi="gbcp ; git checkout master ; git pull ; git checkout $(pbpaste) ; git rebase -i master"
 alias mv="mv -i"
 
 # Use eza as replacement for ls if available
